[package]
name = "onechilli-dev-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.37.1", features = ["serde"] }
anyhow = "1.0.98"
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
tower = "0.4.13" # The latest stable is 0.4.13. Tower has 0.5.x versions, but they appear to be in pre-release or development.
tower-http = { version = "0.6.6", features = ["cors"] } # Updated from 0.6.1
thiserror = "2.0.12" # Updated from 1.0.61 (this is a major version bump!)
serde_yaml = "0.9.34" # Note: This crate is marked as deprecated by its maintainer.
dotenvy = "0.15.7"